# RUCH

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sherpa-jni.cpp  whisper-jni.cpp
app/src/main/java/com/ruch/translator/: Models.kt  RUCHApplication.kt
app/src/main/java/com/ruch/translator/audio/: AudioPlayer.kt  AudioRecorder.kt  MelSpectrogram.kt
app/src/main/java/com/ruch/translator/data/: ModelDownloadService.kt  Models.kt  PreferencesManager.kt
app/src/main/java/com/ruch/translator/nn/: TensorUtils.kt
app/src/main/java/com/ruch/translator/stt/: AndroidSpeechRecognizer.kt  SherpaWhisperRecognizer.kt  SpeechRecognizer.kt  SpeechRecognizerNative.kt  WhisperSTT.kt
app/src/main/java/com/ruch/translator/translation/: NLLBTranslator.kt  NllbTranslator.kt  OfflineTranslator.kt  SentencePieceTokenizer.kt  TranslatorEngine.kt
app/src/main/java/com/ruch/translator/tts/: AndroidTTSEngine.kt  SherpaTTSEngine.kt  TTSEngine.kt  TTSEngineNative.kt
app/src/main/java/com/ruch/translator/ui/: MainActivity.kt
app/src/main/java/com/ruch/translator/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_history.xml  ic_info.xml  ic_launcher_foreground.xml  ic_menu.xml  ic_mic.xml  ic_settings.xml  ic_speaker.xml  ic_stream.xml  ic_theme.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: BUILD_NATIVE.md  MODELS_INSTRUCTIONS.md  NATIVE_BUILD.md  NATIVE_CONFIG.md
scripts/: build_whisper_android.sh  download_ai_models.ps1  download_ai_models.sh  download_models.ps1  download_models.sh  download_models_curl.bat  download_whisper_models.sh
